--- a/css.css
+++ b/css.css
@@ -18,10 +18,11 @@ h4 {
 
 .input {
   position: absolute;
-  width: 300px;
-  height: 500px;
+  padding: 1em;
+  width: 170px;
+  height: 300px;
   color: #fefefe;
-  text-align: center;
+  text-align: left;
   background-color: rgba(0, 0, 0, 1.0);
   opacity: 0.1;
   -webkit-transition: opacity 200ms linear;
@@ -29,6 +30,10 @@ h4 {
   transition: opacity 200ms linear;
   top: 1em;
   right: 1em;
+}
+
+.warning{
+  padding-top: 2.2em;
 }
 
 .input:hover {
